--- a/package.json
+++ b/package.json
@@ -40,5 +40,7 @@
     "husky": "^4.3.0",
     "lint-staged": "^10.5.2",
     "prettier": "^2.2.1"
+  },
+
+  "homepage": "https://AslanovRustam.github.io/goit-react-hw-01-components"
   }
-}
